--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,7 @@
     display: flex;
     flex-wrap: wrap;
 }
-.social{
+.social, {
     color: aliceblue;
 }
 
@@ -68,12 +68,11 @@
     font-size: x-large;
     font-family: cursive;
     padding-left: 20px;
-
 }
-hr {
+    .horizontal {
     margin-top: 30px;
     border: 0;
-    height: 3px;
+    height: 5px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(9, 84, 132), rgba(0, 0, 0, 0));
   }
   .container {
@@ -97,3 +96,21 @@ hr {
     background-color: #2081d1;
     color: white;
   }
+  .third-container{
+    flex-direction: row;
+  }
+.ul-title{
+    font-family: fantasy;
+    font-size: x-large;
+    color: #0bb5f4;
+}
+
+.list{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    color: #20d1b4;
+}
+.my-bio{
+    font-size: larger;
+    padding-left: 2%;
+}
